test/files/neg/override-object-flag.check
override-object-flag.scala:3: error: overriding object Foo (defined in trait A);
 override object Foo cannot override final member
trait B extends A  { override object Foo }
                                     ^
one error found
